# creme

./: .gitignore  Cargo.toml  README.md
creme/: Cargo.toml  README.md
creme/src/: embed.rs  lib.rs  service.rs
creme/src/services/: dev_service.rs  mod.rs
creme_bundler/: Cargo.toml
creme_bundler/src/: css.rs  lib.rs
creme_macros/: Cargo.toml
creme_macros/src/: asset.rs  lib.rs  service.rs
examples/axum_askama/: Cargo.toml  build.rs
examples/axum_askama/assets/css/: style.css
examples/axum_askama/src/: main.rs
examples/axum_askama/templates/: 404.html  base.html  index.html
examples/axum_maud/: Cargo.toml  build.rs
examples/axum_maud/assets/css/modules/: _fonts.css  _vars.css
examples/axum_maud/src/: main.rs
