[package]
name = "creme_bundler"
version = "0.0.1"
edition = "2021"
authors = ["Matthew Taylor <wrapperup4@gmail.com>"]
description = "This crate is reserved for an upcoming library."
license = "MIT"
readme = "README.md"

[dependencies]
# reqwest = "0.11.18"
lightningcss = { version = "1.0.0-alpha", default-features = false, features = ["bundler", "grid", "browserslist"] }
# basic-toml = "0.1.2"
mime = "0.3"
mime_guess = "2.0"
blake3 = "1.5"
hex = "0.4"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
once_cell = "1.18"
path-absolutize = "3.1"

[features]
default = []
browserslist = ["lightningcss/browserslist"]
